--- a/menu.html
+++ b/menu.html
@@ -1,20 +1,23 @@
 <html>
 <head>
   <title>horizontal pop menu by Hucees</title>
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+  <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="#"><span class=""></span></a>Main Menu</li>
-      <li><a href="#"><span class=""></span></a>far left</li>
-      <li><a href="#"><span class=""></span></a>far right</li>
-      <li><a href="#"><span class=""></span></a>near left</li>
-      <li><a href="#"><span class=""></span></a>near right</li>
+      <li class="second"></li>
+      <li class="first"></li>
+      <li id="main"></li>
+      <li class="first"></li>
+      <li class="second"></li>
     </ul>
   </nav>
 <!-- Jquery -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 <!-- menu.js holds the animations -->
 <script type="text/javascript" src="menu.js"></script>
 </body>
