--- a/menu.html
+++ b/menu.html
@@ -2,15 +2,16 @@
 <head>
   <title>horizontal pop menu by Hucees</title>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
   <nav>
     <ul>
-      <li class="second"></li>
-      <li class="first"></li>
-      <li id="main"></li>
-      <li class="first"></li>
-      <li class="second"></li>
+      <li class="second a text-center" id="farLeft">FL</li>
+      <li class="first b text-center" id="nearLeft">NL</li>
+      <li class="text-center"id="main">Click Me</li>
+      <li class="first c text-center" id="nearRight">NR</li>
+      <li class="second d text-center" id="farRight">FR</li>
     </ul>
   </nav>
 <!-- Jquery -->
@@ -18,6 +19,7 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- menu.js holds the animations -->
 <script type="text/javascript" src="menu.js"></script>
 </body>
